--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
       <div class="col-sm-6 col-md-12 mb-3 mb-lg-0 col-lg-4">
         <div class="card-wrap card1">
           <div class="image-wrap">
-            <img src="assets/images/ai20data20insight-770x890.png" alt="Mobirise Website Builder">
+            <img src="assets/images/ai20data20insight-770x890.png"  >
             <div class="social-row display-7">
               <div class="soc-item tag1">
                 <span class="tag1 mbr-fonts-style display-7">
@@ -79,7 +79,7 @@
       <div class="col-sm-6 col-md-12 mb-3 mb-lg-0 col-lg-4">
         <div class="card-wrap card2">
           <div class="image-wrap">
-            <img src="assets/images/pdf20converter-770x519.png" alt="Mobirise Website Builder">
+            <img src="assets/images/pdf20converter-770x519.png"  >
             <div class="social-row display-7">
               <div class="soc-item tag2">
                 <span class="tag2 mbr-fonts-style display-7">
@@ -100,7 +100,7 @@
       <div class="col-sm-6 col-md-12 mb-3 mb-lg-0 col-lg-4">
         <div class="card-wrap card3">
           <div class="image-wrap">
-            <img src="assets/images/zoom20metting-770x355.png" alt="Mobirise Website Builder">
+            <img src="assets/images/zoom20metting-770x355.png"  >
             <div class="social-row display-7">
               <div class="soc-item tag3">
                 <span class="tag3 mbr-fonts-style display-7">
@@ -136,7 +136,7 @@
         <div class="card-wrapper">
           <div class="row">
             <div class="col-12 col-md-12 col-lg-5 image-wrapper">
-              <img class="w-100" src="assets/images/aifaceswap-fccc531f5b9cc557926e18b6ba37f9c0-2-994x1491.jpeg" alt="Mobirise Website Builder">
+              <img class="w-100" src="assets/images/aifaceswap-fccc531f5b9cc557926e18b6ba37f9c0-2-994x1491.jpeg"  >
             </div>
             <div class="col-12 col-lg col-md-12">
               <div class="text-wrapper align-left">
@@ -167,7 +167,7 @@
         <div class="row mbr-gallery mt-4">
             <div class="col-12 col-md-6 col-lg-3 item gallery-image active">
                 <div class="item-wrapper mb-3" data-toggle="modal" data-bs-toggle="modal" data-target="#uYjCz7lwbO-modal" data-bs-target="#uYjCz7lwbO-modal">
-                    <img class="w-100" src="assets/images/ai20data20insight-561x648.png" alt="Mobirise Website Builder" data-slide-to="0" data-bs-slide-to="0" data-target="#lb-uYjCz7lwbO" data-bs-target="#lb-uYjCz7lwbO">
+                    <img class="w-100" src="assets/images/ai20data20insight-561x648.png"   data-slide-to="0" data-bs-slide-to="0" data-target="#lb-uYjCz7lwbO" data-bs-target="#lb-uYjCz7lwbO">
                     <!-- <div class="icon-wrapper">
                         <span class="mobi-mbri mobi-mbri-search mbr-iconfont mbr-iconfont-btn"></span>
                     </div> -->
@@ -176,7 +176,7 @@
             </div>
             <div class="col-12 col-md-6 col-lg-3 item gallery-image">
                 <div class="item-wrapper mb-3" data-toggle="modal" data-bs-toggle="modal" data-target="#uYjCz7lwbO-modal" data-bs-target="#uYjCz7lwbO-modal">
-                    <img class="w-100" src="assets/images/automation-561x225.png" alt="Mobirise Website Builder" data-slide-to="1" data-bs-slide-to="1" data-target="#lb-uYjCz7lwbO" data-bs-target="#lb-uYjCz7lwbO">
+                    <img class="w-100" src="assets/images/automation-561x225.png"   data-slide-to="1" data-bs-slide-to="1" data-target="#lb-uYjCz7lwbO" data-bs-target="#lb-uYjCz7lwbO">
                     <!-- <div class="icon-wrapper">
                         <span class="mobi-mbri mobi-mbri-search mbr-iconfont mbr-iconfont-btn"></span>
                     </div> -->
@@ -185,7 +185,7 @@
             </div>
             <div class="col-12 col-md-6 col-lg-3 item gallery-image">
                 <div class="item-wrapper mb-3" data-toggle="modal" data-bs-toggle="modal" data-target="#uYjCz7lwbO-modal" data-bs-target="#uYjCz7lwbO-modal">
-                    <img class="w-100" src="assets/images/b2b20partnership-561x242.png" alt="Mobirise Website Builder" data-slide-to="2" data-bs-slide-to="2" data-target="#lb-uYjCz7lwbO" data-bs-target="#lb-uYjCz7lwbO">
+                    <img class="w-100" src="assets/images/b2b20partnership-561x242.png"   data-slide-to="2" data-bs-slide-to="2" data-target="#lb-uYjCz7lwbO" data-bs-target="#lb-uYjCz7lwbO">
                     <!-- <div class="icon-wrapper">
                         <span class="mobi-mbri mobi-mbri-search mbr-iconfont mbr-iconfont-btn"></span>
                     </div> -->
@@ -194,7 +194,7 @@
             </div>
             <div class="col-12 col-md-6 col-lg-3 item gallery-image">
                 <div class="item-wrapper mb-3" data-toggle="modal" data-bs-toggle="modal" data-target="#uYjCz7lwbO-modal" data-bs-target="#uYjCz7lwbO-modal">
-                    <img class="w-100" src="assets/images/golden20city-561x261.png" alt="Mobirise Website Builder" data-slide-to="3" data-bs-slide-to="3" data-target="#lb-uYjCz7lwbO" data-bs-target="#lb-uYjCz7lwbO">
+                    <img class="w-100" src="assets/images/golden20city-561x261.png"   data-slide-to="3" data-bs-slide-to="3" data-target="#lb-uYjCz7lwbO" data-bs-target="#lb-uYjCz7lwbO">
                     <!-- <div class="icon-wrapper">
                         <span class="mobi-mbri mobi-mbri-search mbr-iconfont mbr-iconfont-btn"></span>
                     </div> -->
@@ -203,7 +203,7 @@
             </div>
             <div class="col-12 col-md-6 col-lg-3 item gallery-image">
                 <div class="item-wrapper mb-3" data-toggle="modal" data-bs-toggle="modal" data-target="#uYjCz7lwbO-modal" data-bs-target="#uYjCz7lwbO-modal">
-                    <img class="w-100" src="assets/images/pdf20converter-561x378.png" alt="Mobirise Website Builder" data-slide-to="4" data-bs-slide-to="4" data-target="#lb-uYjCz7lwbO" data-bs-target="#lb-uYjCz7lwbO">
+                    <img class="w-100" src="assets/images/pdf20converter-561x378.png"   data-slide-to="4" data-bs-slide-to="4" data-target="#lb-uYjCz7lwbO" data-bs-target="#lb-uYjCz7lwbO">
                     <!-- <div class="icon-wrapper">
                         <span class="mobi-mbri mobi-mbri-search mbr-iconfont mbr-iconfont-btn"></span>
                     </div> -->
@@ -212,7 +212,7 @@
             </div>
             <div class="col-12 col-md-6 col-lg-3 item gallery-image">
                 <div class="item-wrapper mb-3" data-toggle="modal" data-bs-toggle="modal" data-target="#uYjCz7lwbO-modal" data-bs-target="#uYjCz7lwbO-modal">
-                    <img class="w-100" src="assets/images/zoom20metting-561x258.png" alt="Mobirise Website Builder" data-slide-to="5" data-bs-slide-to="5" data-target="#lb-uYjCz7lwbO" data-bs-target="#lb-uYjCz7lwbO">
+                    <img class="w-100" src="assets/images/zoom20metting-561x258.png"   data-slide-to="5" data-bs-slide-to="5" data-target="#lb-uYjCz7lwbO" data-bs-target="#lb-uYjCz7lwbO">
                     <!-- <div class="icon-wrapper">
                         <span class="mobi-mbri mobi-mbri-search mbr-iconfont mbr-iconfont-btn"></span>
                     </div> -->
@@ -221,7 +221,7 @@
             </div>
             <div class="col-12 col-md-6 col-lg-3 item gallery-image">
                 <div class="item-wrapper mb-3" data-toggle="modal" data-bs-toggle="modal" data-target="#uYjCz7lwbO-modal" data-bs-target="#uYjCz7lwbO-modal">
-                    <img class="w-100" src="assets/images/whatsapp20image202025-07-0520at201.57.3020am-561x316.jpg" alt="Mobirise Website Builder" data-slide-to="6" data-bs-slide-to="6" data-target="#lb-uYjCz7lwbO" data-bs-target="#lb-uYjCz7lwbO">
+                    <img class="w-100" src="assets/images/whatsapp20image202025-07-0520at201.57.3020am-561x316.jpg"   data-slide-to="6" data-bs-slide-to="6" data-target="#lb-uYjCz7lwbO" data-bs-target="#lb-uYjCz7lwbO">
                     <!-- <div class="icon-wrapper">
                         <span class="mobi-mbri mobi-mbri-search mbr-iconfont mbr-iconfont-btn"></span>
                     </div> -->
@@ -229,7 +229,7 @@
                 
             </div><div class="col-12 col-md-6 col-lg-3 item gallery-image">
                 <div class="item-wrapper mb-3" data-toggle="modal" data-bs-toggle="modal" data-target="#uYjCz7lwbO-modal" data-bs-target="#uYjCz7lwbO-modal">
-                    <img class="w-100" src="assets/images/screenshot205-561x315.png" alt="Mobirise Website Builder" data-slide-to="7" data-bs-slide-to="7" data-target="#lb-uYjCz7lwbO" data-bs-target="#lb-uYjCz7lwbO">
+                    <img class="w-100" src="assets/images/screenshot205-561x315.png"   data-slide-to="7" data-bs-slide-to="7" data-target="#lb-uYjCz7lwbO" data-bs-target="#lb-uYjCz7lwbO">
                     <!-- <div class="icon-wrapper">
                         <span class="mobi-mbri mobi-mbri-search mbr-iconfont mbr-iconfont-btn"></span>
                     </div> -->
@@ -246,27 +246,27 @@
                         <div class="carousel slide" id="lb-uYjCz7lwbO" data-ride="carousel" data-bs-ride="carousel" data-interval="3000" data-bs-interval="3000">
                             <div class="carousel-inner">
                                 <div class="carousel-item active">
-                                    <img class="d-block w-100" src="assets/images/ai20data20insight-561x648.png" alt="Mobirise Website Builder">
+                                    <img class="d-block w-100" src="assets/images/ai20data20insight-561x648.png"  >
                                 </div>
                                 <div class="carousel-item">
-                                    <img class="d-block w-100" src="assets/images/automation-561x225.png" alt="Mobirise Website Builder">
+                                    <img class="d-block w-100" src="assets/images/automation-561x225.png"  >
                                 </div>
                                 <div class="carousel-item">
-                                    <img class="d-block w-100" src="assets/images/b2b20partnership-561x242.png" alt="Mobirise Website Builder">
+                                    <img class="d-block w-100" src="assets/images/b2b20partnership-561x242.png"  >
                                 </div>
                                 <div class="carousel-item">
-                                    <img class="d-block w-100" src="assets/images/golden20city-561x261.png" alt="Mobirise Website Builder">
+                                    <img class="d-block w-100" src="assets/images/golden20city-561x261.png"  >
                                 </div>
                                 <div class="carousel-item">
-                                    <img class="d-block w-100" src="assets/images/pdf20converter-561x378.png" alt="Mobirise Website Builder">
+                                    <img class="d-block w-100" src="assets/images/pdf20converter-561x378.png"  >
                                 </div>
                                 <div class="carousel-item">
-                                    <img class="d-block w-100" src="assets/images/zoom20metting-561x258.png" alt="Mobirise Website Builder">
+                                    <img class="d-block w-100" src="assets/images/zoom20metting-561x258.png"  >
                                 </div>
                                 <div class="carousel-item">
-                                    <img class="d-block w-100" src="assets/images/whatsapp20image202025-07-0520at201.57.3020am-561x316.jpg" alt="Mobirise Website Builder">
+                                    <img class="d-block w-100" src="assets/images/whatsapp20image202025-07-0520at201.57.3020am-561x316.jpg"  >
                                 </div><div class="carousel-item">
-                                    <img class="d-block w-100" src="assets/images/screenshot205-561x315.png" alt="Mobirise Website Builder">
+                                    <img class="d-block w-100" src="assets/images/screenshot205-561x315.png"  >
                                 </div>
                                 
                             </div>
@@ -315,7 +315,7 @@
 			<div class="item features-image col-12 col-md-6 col-lg-4">
 				<div class="item-wrapper">
 					<div class="item-img mb-3">
-						<img src="assets/images/aifaceswap-fccc531f5b9cc557926e18b6ba37f9c0-1-770x1155.jpeg" alt="Mobirise Website Builder" title="">
+						<img src="assets/images/aifaceswap-fccc531f5b9cc557926e18b6ba37f9c0-1-770x1155.jpeg" title="https://wa.me/message/QPCRGJKGBW6LC1" href="https://wa.me/message/QPCRGJKGBW6LC1">
 					</div>
 					<div class="item-content align-left">
 						<h5 class="item-title mbr-fonts-style display-5"><strong>Abdullah Bashir</strong></h5>
@@ -328,7 +328,7 @@
 			<div class="item features-image col-12 col-md-6 col-lg-4">
 				<div class="item-wrapper">
 					<div class="item-img mb-3">
-						<img src="assets/images/whatsapp20image202025-10-0120at201.36.4620am-770x1037.jpeg" alt="Mobirise Website Builder" title="">
+						<img src="assets/images/whatsapp20image202025-10-0120at201.36.4620am-770x1037.jpeg" title="">
 					</div>
 					<div class="item-content align-left">
 						<h5 class="item-title mbr-fonts-style display-5"><strong>Nouman Jaffar</strong></h5>
@@ -341,7 +341,7 @@
 			<div class="item features-image col-12 col-md-6 col-lg-4">
 				<div class="item-wrapper">
 					<div class="item-img mb-3">
-						<img src="assets/images/aifaceswap-979edd88602d1107aa5c25f142396951-770x1155.jpeg" alt="Mobirise Website Builder" title="">
+						<img src="assets/images/aifaceswap-979edd88602d1107aa5c25f142396951-770x1155.jpeg"  title="">
 					</div>
 					<div class="item-content align-left">
 						<h5 class="item-title mbr-fonts-style display-5"><strong>Rana Zia ul din</strong></h5>
@@ -392,7 +392,7 @@
 			</div>
 			<div class="col-lg-5 col-12">
 				<div class="image-wrapper">
-					<img class="w-100" src="assets/images/mbr-978x652.jpg" alt="Mobirise Website Builder">
+					<img class="w-100" src="assets/images/mbr-978x652.jpg"  >
 				</div>
 			</div>
 		</div>
